# PhantomPilot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
configs/: example_config.yaml
src/phantompilot/: __init__.py  cli.py  config.py  models.py
src/phantompilot/adapters/: __init__.py  base.py  crewai.py  langchain.py  rest.py
src/phantompilot/modules/: __init__.py  asi01_prompt_injection.py  asi02_tool_misuse.py  asi03_excessive_permissions.py  asi04_output_validation.py  asi05_output_consumption.py  asi06_memory_poisoning.py  asi07_supply_chain.py  asi08_overreliance.py  asi09_interagent_comms.py  asi10_rogue_agent.py  base.py
src/phantompilot/reporters/: __init__.py  atlas_reporter.py  base.py  html_reporter.py  json_reporter.py  metrics.py
tests/: conftest.py  test_cli.py  test_config.py  test_models.py
tests/adapters/: test_crewai_adapter.py  test_langchain_adapter.py  test_rest_adapter.py
tests/modules/: test_asi01_prompt_injection.py  test_asi02_tool_misuse.py  test_asi06_memory_poisoning.py  test_asi09_interagent_comms.py
tests/reporters/: test_atlas_reporter.py  test_html_reporter.py  test_json_reporter.py  test_metrics.py
