[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phantompilot"
version = "0.1.0"
description = "Automated security testing framework for the OWASP Top 10 Agentic AI risks"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["click>=8.1", "httpx>=0.27", "pyyaml>=6.0", "rich>=13.0", "jinja2>=3.1"]

[project.optional-dependencies]
langchain = ["langchain>=0.2", "langchain-core>=0.2"]
crewai = ["crewai>=0.41"]
llm = ["openai>=1.0", "anthropic>=0.30"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5", "coverage>=7.0", "types-PyYAML", "pre-commit>=3.7", "build>=1.0", "twine>=5.0"]
all = ["phantompilot[langchain,crewai,llm,dev]"]

[project.scripts]
phantompilot = "phantompilot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/phantompilot"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
